Fix issue with grid overlapping container's inset shadow

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,7 +1,16 @@
 .grid-container {
   grid-area: grid;
   position: relative;
+}
+
+.inset-shadow-caster {
   box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.25) inset;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  pointer-events: none;
 }
 
 .grid-container-inner {
